[DOC] Fix about me section on mobiles

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -597,7 +597,7 @@ footer .footer-below {
     }
 
     #about .about-item h4 {
-        font-size: 1.3em; /* Reduce ligeramente el tamaño de los títulos en móviles */
+        font-size: 1.5em; /* Reduce ligeramente el tamaño de los títulos en móviles */
     }
 
     #about .about-item p {
